fix(styles): fox scrollbars color

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -4,6 +4,23 @@
 $ig-cells-padding: sizable(rem(8px), rem(16px), rem(24px));
 $ig-cells-min-height: sizable(rem(24px), rem(34px), rem(50px));
 
+@mixin ig-scrollbar($track-size, $track-bg, $thumb-bg) {
+	// Firefox only
+	scrollbar-width: $track-size;
+	scrollbar-color: $thumb-bg $track-bg;
+	
+	// Chromium only
+	::-webkit-scrollbar {
+		width: $track-size;
+		height: $track-size;
+		background: $track-bg;
+	}
+	
+	::-webkit-scrollbar-thumb {
+		background: $thumb-bg;
+	}
+}
+
 :host {
 	@include sizable();
 	
@@ -12,6 +29,12 @@ $ig-cells-min-height: sizable(rem(24px), rem(34px), rem(50px));
 	
 	position: relative;
 	box-sizing: border-box;
+	
+	@include ig-scrollbar(
+		var(--ig-scrollbar-size, var(--sb-size)),
+		var(--ig-scrollbar-track-background, var(--sb-track-bg-color)),
+		var(--ig-scrollbar-thumb-background, var(--sb-thumb-bg-color))
+	);
 	
 	*,
 	*::before,
